<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">我爱复习</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">设置</string>
    <string name="network_failed">网络有点问题</string>
    <string name="settings_logout">退出登录</string>
    <string name="title_settings">设置</string>
    <string name="hint_email">请输入邮箱</string>
    <string name="hint_password">请输入密码</string>
    <string name="hint_confirm_password">请确认密码</string>
    <string name="btn_confirm">确定</string>
    <string name="btn_register">注册</string>
    <string name="btn_has_account_login">已有账号，去登陆</string>
    <string name="btn_login">登陆</string>
    <string name="btn_register_account">注册账号</string>
    <string name="current_user_format">当前登录用户: %s</string>
    <string name="reminder_list">提醒列表</string>
    <string name="action_new">新建</string>
    <string name="btn_create">新建</string>
    <string name="create_succeed">创建成功</string>
    <string name="create_failed">创建失败</string>
    <string name="reminder_list_explain">这里的闹钟每天都会提醒你复习哦</string>
    <string name="about_app"> 我爱复习是一款帮助你学习，复习，积累知识的强大工具。\n\n"不积跬步无以至千里"\n子也曾经曰过："学而时习之不亦悦乎"\n。。。。。。\n\n你可以随手记下来任何知识碎片，再设置一个提醒，系统会帮你随机抽出一部分来复习，你也可以自由地复习任何笔记。如果在使用过程中你有任何的需求或者发现任何问题，你可以通过如下方式找到我们：\n联系邮箱：waitress@woaifuxi.com</string>
    <string name="hint_tweet_content">输入笔记内容</string>
    <string name="unknown_error">未知错误</string>
    <string name="image_description">This is an image</string>
    <string name="text_test">TestText</string>
    <string name="text_nickname">昵称</string>
    <string name="text_login_email">登录邮箱</string>
    <string name="select_pic_or_take_pic">选择或拍摄一张照片</string>
    <string name="confirm_delete">确定删除</string>
    <string name="text_cancel">取消</string>
    <string name="text_ok">确定</string>
    <string name="distribution_channel">woaifuxi.com</string>
    <!--<string name="reminder_list_explain">这里的闹钟每天都会提醒你复习哦，长按可以删除某一个闹钟</string>-->
</resources>

